[New] - Added "Variation Attributes" product filter [Check] - WordPress 6.5 compatibility check [Check] - WooCommerce 8.7 compatibility check

--- a/languages/table-rate-shipping-rates.po
+++ b/languages/table-rate-shipping-rates.po
@@ -1,41 +1,51 @@
-# Copyright (C) 2023 zendcrew
-# This file is distributed under the same license as the Shipped - WooCommerce Table Rate Shipping plugin.
 msgid ""
 msgstr ""
 "Project-Id-Version: Shipped - WooCommerce Table Rate Shipping 1.2.5\n"
-"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/table-rate-"
-"shipping-rates\n"
-"POT-Creation-Date: 2023-11-08T03:34:42+01:00\n"
-"PO-Revision-Date: 2023-11-08 03:39+0100\n"
+"Report-Msgid-Bugs-To: https://wordpress.org/support/plugin/table-rate-shipping-rates\n"
 "Last-Translator: \n"
 "Language-Team: \n"
-"Language: en_US\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"POT-Creation-Date: 2023-11-08T03:34:42+01:00\n"
+"PO-Revision-Date: 2023-11-08 03:39+0100\n"
+"Language: en_US\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "X-Generator: Poedit 3.2.2\n"
 "X-Domain: table-rate-shipping-rates\n"
 
 #. Plugin Name of the plugin
+#: D:\My
+#: Projects\Website
+#: Projects\CodeCanyon\table-rate-shipping-rates\table-rate-shipping-rates.php
 msgid "Shipped - WooCommerce Table Rate Shipping"
 msgstr ""
 
 #. Plugin URI of the plugin
+#: D:\My
+#: Projects\Website
+#: Projects\CodeCanyon\table-rate-shipping-rates\table-rate-shipping-rates.php
 msgid "https://wordpress.org/plugins/table-rate-shipping-rates"
 msgstr ""
 
 #. Description of the plugin
-msgid ""
-"Create multiple shipping rates & handling fees based on product rules and "
-"cart conditions"
+#: D:\My
+#: Projects\Website
+#: Projects\CodeCanyon\table-rate-shipping-rates\table-rate-shipping-rates.php
+msgid "Create multiple shipping rates & handling fees based on product rules and cart conditions"
 msgstr ""
 
 #. Author of the plugin
+#: D:\My
+#: Projects\Website
+#: Projects\CodeCanyon\table-rate-shipping-rates\table-rate-shipping-rates.php
 msgid "zendcrew"
 msgstr ""
 
 #. Author URI of the plugin
+#: D:\My
+#: Projects\Website
+#: Projects\CodeCanyon\table-rate-shipping-rates\table-rate-shipping-rates.php
 msgid "https://codecanyon.net/user/zendcrew/portfolio?ref=zendcrew"
 msgstr ""
 
@@ -1005,9 +1015,7 @@ msgstr ""
 
 #. translators: 1: module name 2: module name
 #: extensions/shipped/admin/logic-types/logic-types-conditions.php:63
-msgid ""
-"List of conditions in which this %1$s should apply, empty conditions will "
-"apply this %2$s in any scenario"
+msgid "List of conditions in which this %1$s should apply, empty conditions will apply this %2$s in any scenario"
 msgstr ""
 
 #: extensions/shipped/admin/logic-types/logic-types-conditions.php:67
@@ -1023,9 +1031,7 @@ msgid "Conditions"
 msgstr ""
 
 #: extensions/shipped/admin/logic-types/logic-types-conditions.php:84
-msgid ""
-"List of conditions in which this shipping cost should apply, all specified "
-"conditions must match"
+msgid "List of conditions in which this shipping cost should apply, all specified conditions must match"
 msgstr ""
 
 #: extensions/shipped/admin/logic-types/logic-types-conditions.php:107
@@ -1033,9 +1039,7 @@ msgid "Method Conditions"
 msgstr ""
 
 #: extensions/shipped/admin/logic-types/logic-types-conditions.php:108
-msgid ""
-"List of conditions in which this shipping method should apply, empty "
-"conditions will apply this shipping method in any scenario"
+msgid "List of conditions in which this shipping method should apply, empty conditions will apply this shipping method in any scenario"
 msgstr ""
 
 #: extensions/shipped/admin/logic-types/logic-types-conditions.php:144
@@ -1044,10 +1048,7 @@ msgstr ""
 
 #: extensions/shipped/admin/notices/notices-view-pro.php:2
 #: extensions/shipped/admin/notices/notices-view.php:2
-msgid ""
-"Hey, I noticed you having been using <strong>Shipped - WooCommerce Table "
-"Rate Shipping</strong>, that’s awesome! Could you please do me a favor and "
-"give it a 5-star rating to help us spread the word?"
+msgid "Hey, I noticed you having been using <strong>Shipped - WooCommerce Table Rate Shipping</strong>, that’s awesome! Could you please do me a favor and give it a 5-star rating to help us spread the word?"
 msgstr ""
 
 #: extensions/shipped/admin/notices/notices-view-pro.php:4
@@ -1103,8 +1104,7 @@ msgid "Addition / Subtraction"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/cart-fees-section/cart-fees-panel-base-costs.php:167
-msgid ""
-"Determines whether no conditions should be validated before fee calculation"
+msgid "Determines whether no conditions should be validated before fee calculation"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/cart-fees-section/cart-fees-panel-base-costs.php:168
@@ -1332,9 +1332,7 @@ msgid "Always show message"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/checkout-messages-section/checkout-messages-panel-options.php:66
-msgid ""
-"A text to display on the cart / checkout pages. html, shortcodes and "
-"{{Parameter ID}} can also by included in the message."
+msgid "A text to display on the cart / checkout pages. html, shortcodes and {{Parameter ID}} can also by included in the message."
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/checkout-messages-section/checkout-messages-panel-options.php:92
@@ -1425,9 +1423,7 @@ msgid "Import Settings"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-page.php:95
-msgid ""
-"Here you can import new settings. Simply paste the settings url or data on "
-"the field below."
+msgid "Here you can import new settings. Simply paste the settings url or data on the field below."
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-page.php:96
@@ -1435,9 +1431,7 @@ msgid "Import from url"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-page.php:97
-msgid ""
-"Paste the url to another site's settings below and click the 'Import Now' "
-"button."
+msgid "Paste the url to another site's settings below and click the 'Import Now' button."
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-page.php:98
@@ -1461,8 +1455,7 @@ msgid "Import Now"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-page.php:103
-msgid ""
-"Warning! This will override all existing settings. proceed with caution!"
+msgid "Warning! This will override all existing settings. proceed with caution!"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-page.php:106
@@ -1470,9 +1463,7 @@ msgid "Export Settings"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-page.php:107
-msgid ""
-"Here you can backup your current settings. You can later use it to restore "
-"your settings."
+msgid "Here you can backup your current settings. You can later use it to restore your settings."
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-page.php:108
@@ -1588,9 +1579,7 @@ msgid "Use these settings to control handling fees basic settings"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-section/settings-cart-fees.php:53
-msgid ""
-"Determines whether or not to use tax rates applied to shipping only for fees "
-"tax rates"
+msgid "Determines whether or not to use tax rates applied to shipping only for fees tax rates"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-section/settings-cart-fees.php:54
@@ -1642,9 +1631,7 @@ msgid "Debug &amp; Cache Settings"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-section/settings-debug-cache.php:44
-msgid ""
-"Use these settings to enable debug mode or specify how shipping data should "
-"be cached.<br /> Debug mode will disable caching."
+msgid "Use these settings to enable debug mode or specify how shipping data should be cached.<br /> Debug mode will disable caching."
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-section/settings-debug-cache.php:57
@@ -1786,9 +1773,7 @@ msgid "Cart &amp; Package Totals Calculation"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-section/settings-totals.php:92
-msgid ""
-"Use these settings to control what are included in the \"based on\" "
-"percentage totals &amp; the \"cart &amp; package totals\" conditions"
+msgid "Use these settings to control what are included in the \"based on\" percentage totals &amp; the \"cart &amp; package totals\" conditions"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/settings-section/settings-totals.php:110
@@ -1954,13 +1939,11 @@ msgid "Controls shipping cost type"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/shipping-rates-section/shipping-rates-panel-base-costs.php:156
-msgid ""
-"Controls how the shipping cost should be added to previously calculated costs"
+msgid "Controls how the shipping cost should be added to previously calculated costs"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/shipping-rates-section/shipping-rates-panel-base-costs.php:167
-msgid ""
-"Determines whether no conditions should be validated before cost calculation"
+msgid "Determines whether no conditions should be validated before cost calculation"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/shipping-rates-section/shipping-rates-panel-base-costs.php:205
@@ -1976,8 +1959,7 @@ msgid "Grouped Shipping Costs"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/shipping-rates-section/shipping-rates-panel-extra-costs.php:57
-msgid ""
-"List of grouped shipping costs to apply, empty list will apply zero cost"
+msgid "List of grouped shipping costs to apply, empty list will apply zero cost"
 msgstr ""
 
 #: extensions/shipped/admin/settings-page/shipping-rates-section/shipping-rates-panel-max.php:70
@@ -2049,7 +2031,5 @@ msgid "Table Rate Shipping & Handling Fees for WooCommerce"
 msgstr ""
 
 #: table-rate-shipping-rates.php:87
-msgid ""
-"WooCommerce Table Rate Shipping requires WooCommerce to be installed and "
-"activated."
+msgid "WooCommerce Table Rate Shipping requires WooCommerce to be installed and activated."
 msgstr ""
